force-app/main/default/objects/Implementation_Project__c/Implementation_Project__c.object-meta.xml
<CustomObject>
    <label>Implementation Project</label>
    <nameField>
        <displayFormat>IP{00000}</displayFormat>
        <label>Implementation Project No:</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Implementation Projects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>