force-app/main/default/objects/Implementation_Project__c/fields/Opportunity_name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_name__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Implementation Projects</relationshipLabel>
    <relationshipName>Implementation_Projects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>