force-app/main/default/objects/Implementation_Project__c/fields/Stabilise_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Stabilise_Start_Date__c</fullName>
    <description>The date the IP hit the &quot;Stabilise&quot; stage</description>
    <label>Stabilise Start Date</label>
    <type>Date</type>
</CustomField>