force-app/main/default/objects/Implementation_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Implementation_Project_Owner__c</columns>
    <columns>Opportunity_name__c</columns>
    <columns>Organisation__c</columns>
    <columns>Key_Customer_Contact__c</columns>
    <columns>Implementation_Start_Date__c</columns>
    <columns>Implementation_Stage__c</columns>
    <columns>Status__c</columns>
    <columns>Estimated_completion_date__c</columns>
    <columns>Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>