force-app/main/default/objects/Implementation_Project__c/listViews/All_Open_Implementation_Projects.listView-meta.xml
<ListView>
    <fullName>All_Open_Implementation_Projects</fullName>
    <columns>NAME</columns>
    <columns>Organisation__c</columns>
    <columns>Opportunity_name__c</columns>
    <columns>Status__c</columns>
    <columns>Implementation_Project_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Implementation_Stage__c</field>
        <operation>equals</operation>
        <value>Plan,Implement,Stabilise</value>
    </filters>
    <label>All Open Implementation Projects</label>
</ListView>