force-app/main/default/objects/Implementation_Project__c/listViews/My_Open_Implementation_Projects.listView-meta.xml
<ListView>
    <fullName>My_Open_Implementation_Projects</fullName>
    <columns>NAME</columns>
    <columns>Implementation_Project_Owner__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Implementation_Start_Date__c</columns>
    <columns>Estimated_completion_date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Open Implementation Projects</label>
</ListView>